--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,39 +1,37 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+# Dependencies
+node_modules
 
-# dependencies
-node_modules/
+# Build outputs
+dist
+build
 
-# Expo
-.expo/
-dist/
-web-build/
-expo-env.d.ts
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Native
-.kotlin/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-*.pem
 
-# local env files
-.env*.local
+# OS generated files
+Thumbs.db
+*.tmp
+*.temp
 
-# typescript
-*.tsbuildinfo
+# Testing
+coverage
 
-app-example
+# Vite
+.vite
